<?xml version="1.0"?>
<package>
  <name>tb_simulation</name>
  <version>0.1.0</version>
  <description>Turtlebot simulation environment with different maps. Modified from turtlebot_gazebo and c4r_simulation by Philipp Schillinger: philipp.schillinger@de.bosch.com.</description>

  <maintainer email="tengfan@kth.se">Tengfan Lin</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>yocs_cmd_vel_mux</run_depend>
<!--  <run_depend>create_gazebo_plugins</run_depend> disable irobot create due to the compile error in plugin-->
  <run_depend>diagnostic_aggregator</run_depend>
  <run_depend>depthimage_to_laserscan</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>kobuki_gazebo_plugins</run_depend>
  <run_depend>robot_pose_ekf</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>turtlebot_bringup</run_depend>
  <run_depend>turtlebot_description</run_depend>
  <run_depend>turtlebot_navigation</run_depend>
  <run_depend>xacro</run_depend>
<!-- Above is introduced from turtlebot_gazebo package-->

  <run_depend>rviz</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>amcl</run_depend>
  <run_depend>move_base</run_depend>

  <run_depend>tf_lookup</run_depend>
  <run_depend>speed_limit</run_depend>
  <run_depend>pmb2_description</run_depend>

  <run_depend>flexbe_onboard</run_depend>
  <run_depend>flexbe_widget</run_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/models"/>
  </export>
<!-- Above is modified from c4r_simulation by Philipp Schillinger-->
</package>
